# WorkroomPlayTime035_CustomAsserts

./: .gitignore  README.md
.devcontainer/: devcontainer.json  setup.sh
javascript-project/: MT103_gen.js  MT103_records.js  candidate_gen.js  package-lock.json  package.json  showrecs.html
javascript-project/test/: test.js  test_MT103_gen.js  test_candidate_gen.js  xmlTagsAssertion.js
python-project/: MT103_gen.py  candidate_gen.py  pyproject.toml
python-project/tests/: custom_asserts.py  test_MT103_gen.py  test_calculator.py  test_candidate_gen.py
