[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-project"
version = "0.1.0"
description = "Custom assertions demo project"
requires-python = ">=3.8"

[tool.setuptools]
py-modules = ["calculator", "MT103_gen"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
